[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "bluefors-toolbox"
version = "0.1.0"
description = "Prometheus metrics exporter for a Bluefors dilution refrigerator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "qcodes>=0.50.1",
    "prometheus_client>=0.21.1",
    "werkzeug>=3.1.3",
    "waitress>=3.0.2",
    "numpy>=1.26.4",
    "plotly~=6.0.1",
    "scipy~=1.15.2",
    "ipython~=9.1.0",
    "scikit-learn~=1.6.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scr*"]
